disable components when connected ok

--- a/src/main/resources/com/pablohdz/kafkatestui/hello-view.fxml
+++ b/src/main/resources/com/pablohdz/kafkatestui/hello-view.fxml
@@ -32,7 +32,7 @@
   </FlowPane>
 
   <Label fx:id="welcomeText" />
-  <Button onAction="#onHelloButtonClick" text="Connect To Kafka" />
+  <Button fx:id="buttonConnectKafka" onAction="#onHelloButtonClick" text="Connect To Kafka" />
   <FlowPane prefHeight="497.0" prefWidth="1160.0">
     <FlowPane prefHeight="31.0" prefWidth="1159.0">
       <Label alignment="CENTER" prefHeight="27.0" prefWidth="541.0" text="Producer" />
