--- a/src/main/resources/com/pablohdz/kafkatestui/hello-view.fxml
+++ b/src/main/resources/com/pablohdz/kafkatestui/hello-view.fxml
@@ -35,14 +35,15 @@
   <Button fx:id="buttonConnectKafka" onAction="#onHelloButtonClick" text="Connect To Kafka" />
   <FlowPane prefHeight="497.0" prefWidth="1160.0">
     <FlowPane prefHeight="31.0" prefWidth="1159.0">
-      <Label alignment="CENTER" prefHeight="27.0" prefWidth="541.0" text="Producer" />
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="618.0" text="Consumer" />
+      <Label alignment="CENTER" prefHeight="27.0" prefWidth="132.0" text="Producer to Topic:" />
+         <TextField fx:id="topicProducerInput" prefHeight="25.0" prefWidth="427.0" />
+      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="592.0" text="Consumer" />
       <TextArea fx:id="kafkaProducerInput" prefHeight="457.0" prefWidth="558.0" wrapText="true" />
       <TextArea fx:id="kafkaProducerOutput" prefHeight="206.0" prefWidth="598.0" wrapText="true" />
     </FlowPane>
   </FlowPane>
   <FlowPane prefHeight="200.0" prefWidth="200.0">
-    <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="159.0" text="Send Notification">
+    <Button fx:id="buttonSendKafkaNotification" mnemonicParsing="false" onAction="#onSendNotificationButton" prefHeight="25.0" prefWidth="159.0" text="Send Notification">
       <FlowPane.margin>
         <Insets left="20.0" top="5.0" />
       </FlowPane.margin>
