--- a/src/main/resources/com/pablohdz/kafkatestui/hello-view.fxml
+++ b/src/main/resources/com/pablohdz/kafkatestui/hello-view.fxml
@@ -43,7 +43,8 @@
     </FlowPane>
   </FlowPane>
   <FlowPane prefHeight="200.0" prefWidth="200.0">
-    <Button fx:id="buttonSendKafkaNotification" mnemonicParsing="false" onAction="#onSendNotificationButton" prefHeight="25.0" prefWidth="159.0" text="Send Notification">
+    <Button fx:id="buttonSendKafkaNotification" mnemonicParsing="false" onAction="#onSendNotificationButton"
+      prefHeight="25.0" prefWidth="159.0" text="Send Notification" disable="true">
       <FlowPane.margin>
         <Insets left="20.0" top="5.0" />
       </FlowPane.margin>
